[tool.poetry]
name = "openais"
version = "0.1.0"
description = ""
authors = ["hina02 <hina02limited@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioprocessing = "^2.0.1"
fastapi = "^0.104.1"
openai = "^1.3.5"
spacy = "^3.6.1"
ja_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.6.0/ja_core_news_sm-3.6.0-py3-none-any.whl"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
watchdog = "^3.0.0"
neo4j = "^5.14.1"
diskcache = "^5.6.3"
python-dotenv = "^1.0.0"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
langchain = "^0.0.340"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
